add -I in Makefile.global.in

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -245,11 +245,11 @@ PG_SYSROOT = @PG_SYSROOT@
 override CPPFLAGS := $(ICU_CFLAGS) $(CPPFLAGS)
 
 ifdef PGXS
-override CPPFLAGS := -I$(includedir_server) -I$(includedir_internal) $(CPPFLAGS)
+override CPPFLAGS := -I$(includedir_server) -I$(includedir_internal) -I /usr/include/foundationdb/ $(CPPFLAGS)
 else # not PGXS
-override CPPFLAGS := -I$(top_srcdir)/src/include $(CPPFLAGS)
+override CPPFLAGS := -I$(top_srcdir)/src/include -I /usr/include/foundationdb/ $(CPPFLAGS)
 ifdef VPATH
-override CPPFLAGS := -I$(top_builddir)/src/include $(CPPFLAGS)
+override CPPFLAGS := -I$(top_builddir)/src/include -I /usr/include/foundationdb/ $(CPPFLAGS)
 endif
 endif # not PGXS
 
